--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,51 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
+
 canvas {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
+  width: 800px;
+}
+
+#sketch-container{
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+#gui-container{
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+
+.button{
+	font-family: Verdana;
+	font-size: 30px;
+	padding: 10px;
+	width: 200px;
+	border-radius: 12px;
+}
+
+.colortxt{
+	font-family: Verdana;
+	color: white;
+}
+
+.colorpck{
+  width: 50px;
+	height: 30px;
+}
+
+.slide{
+  opacity: 0.7;
+  width: 150px;
 }
